[package]
name = "xvc-storage"
version = "0.7.1-alpha.1"
edition = "2021"
description = "Xvc remote and local storage management"
authors = ["Emre Şahin <contact@emresahin.net>"]
license = "GPL-3.0"
homepage = "https://xvc.dev"
repository = "https://github.com/iesahin/xvc"
categories = ["command-line-utilities", "development-tools"]
keywords = ["file", "devops", "git", "versioning", "mlops"]


[lib]
name = "xvc_storage"
crate-type = ["rlib"]

[dependencies]
xvc-logging = { version = "0.7.1-alpha.1", path = "../logging" }
xvc-config = { version = "0.7.1-alpha.1", path = "../config" }
xvc-core = { version = "0.7.1-alpha.1", path = "../core" }
xvc-ecs = { version = "0.7.1-alpha.1", path = "../ecs" }
xvc-walker = { version = "0.7.1-alpha.1", path = "../walker" }

## Cli and config
clap = { version = "^4.5", features = ["derive"] }
clap_complete = { version = "^4.5", features = ["unstable-dynamic"] }
directories-next = "2.0"

## Hashing
seahash = "^4.1"
byteorder = "^1.5"
blake3 = "^1.8"
blake2 = "0.10.6"
sha2 = "0.10.9"
sha3 = "0.10.8"

## Serialization
serde = { version = "^1.0", features = ["derive"] }
serde_yaml = "^0.9"
serde_json = "^1.0"
rmp = "^0.8"
rmp-serde = "1.3.0"
toml = { version = "^0.9",  features = ["serde", "parse", "display"]}

## Parallelization
rayon = "^1.11"
crossbeam-channel = "^0.5"
crossbeam = "^0.8"

## File system
jwalk = "^0.8"
walkdir = "^2.5"
relative-path = { version = "^2.0", features = ["serde"] }
path-absolutize = "^3.1"
glob = "^0.3"
which = "^8.0"

## Logging and errors
thiserror = "^2.0"
log = "^0.4"
anyhow = "^1.0"
### meta-logging-in-format is required for sled: https://github.com/spacejam/sled/issues/1384
fern = { version = "^0.7", features = ["colored"] }


## macros
paste = "1.0"

## Misc
humantime = "^2.3"
subprocess = "^0.2"
regex = "^1.12"
strum = "^0.27"
strum_macros = "^0.27"
lazy_static = "^1.5"
uuid = { version = "^1.19", features = ["serde", "v4", "fast-rng"] }
hex = { version = "^0.4", features = ["serde"] }
url = { version = "^2.5", features = ["serde"] }
itertools = "^0.14"
# FIXME: Use features selectively
derive_more = { version = "^2.1", features = ["full"] }
tempfile = "^3.23"

## Networking & Async


tokio = { version = "^1.48", optional = true, features = ["rt-multi-thread"] }
rust-s3 = { version = "^0.37", optional = true }
futures = { version = "^0.3", optional = true }

# On Linux we use "vendored" feature and on Windows we don't use that feature.
openssl = { version = "^0.10", optional = true }

# For rclone support
librclone = { version = "^0.9", optional = true }

[features]
default = ["s3", "minio", "gcs", "wasabi", "r2", "digital-ocean", "rclone"]
async = ["rust-s3", "futures", "tokio"]
s3 = ["async"]
minio = ["s3"]
gcs = ["s3"]
wasabi = ["s3"]
r2 = ["s3"]
digital-ocean = ["s3"]
bundled-openssl = ["openssl/vendored"]
# rclone support
# Uses rclone from the command line, without bundling librclone
rclone = []
# Uses librclone and bundles it. This doesn't compile on Windows as of now.
bundled-rclone = ["rclone", "librclone"]

[dev-dependencies]
xvc-test-helper = { version = "0.7.1-alpha.1", path = "../test_helper/" }
shellfn = "^0.2"

[package.metadata.cargo-udeps.ignore]
normal = ["futures"]
