[package]
name = "xvc-test-helper"
version = "0.4.2-alpha.6"
edition = "2021"
description = "Unit test helper functions for Xvc"
authors = ["Emre Şahin <contact@emresahin.net>"]
license = "Apache-2.0"
homepage = "https://xvc.dev"
repository = "https://github.com/iesahin/xvc"
categories = ["command-line-utilities", "development-tools"]
keywords = ["file", "devops", "git", "versioning", "mlops"]

[lib]
name = "xvc_test_helper"
type = ["rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xvc-logging = {version = "0.4.2-alpha.6", path = "../logging/" }

rand = "^0.8"
log = "^0.4"
anyhow = "^1.0"

