[package]
name = "xvc-test-helper"
version = "0.6.1"
edition = "2021"
description = "Unit test helper functions for Xvc"
authors = ["Emre Şahin <contact@emresahin.net>"]
license = "GPL-3.0"
homepage = "https://xvc.dev"
repository = "https://github.com/iesahin/xvc"
categories = ["command-line-utilities", "development-tools"]
keywords = ["file", "devops", "git", "versioning", "mlops"]

[lib]
name = "xvc_test_helper"

[[bin]]
name = "xvc-test-helper"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xvc-logging = {version = "0.6.0", path = "../logging/" }

rand = "^0.8"
log = "^0.4"
anyhow = "^1.0"
clap = {version = "^4.4", features=["derive"]}

