[package]
name = "xvc-walker"
version = "0.6.17"
edition = "2021"
description = "Xvc parallel file system walker with ignore features"
authors = ["Emre Şahin <contact@emresahin.net>"]
license = "GPL-3.0"
homepage = "https://xvc.dev"
repository = "https://github.com/iesahin/xvc"
categories = ["command-line-utilities", "development-tools"]
keywords = ["file", "devops", "git", "versioning", "mlops"]


[lib]
name = "xvc_walker"
crate-type = ["rlib"]

[dependencies]
xvc-logging = { version = "0.6.17", path = "../logging" }
# NOTE: 0.4 removes Glob struct and this should be handled with care
fast-glob = "^0.3"

## Parallelization
crossbeam-channel = "^0.5"
crossbeam = "^0.8"
rayon = "^1.11"

## File system
notify = "8.2"
jwalk = "^0.8"

dashmap = "^6"

## Logging and errors
thiserror = "^2.0"
anyhow = "^1.0"
log = "^0.4"
peak_alloc = "^0.3"

## Misc
itertools = "^0.14"
regex = "^1.12"

[dev-dependencies]
xvc-test-helper = { path = "../test_helper/", version = "0.6.17" }
test-case = "^3.3"

[package.metadata.cargo-udeps.ignore]
normal = ["xvc-logging", "test-case"]
