[package]
name = "xvc-workflow-tests"
version = "0.5.1"
edition = "2021"
description = "Integration test suite for Xvc"
authors = ["Emre Şahin <contact@emresahin.net>"]
license = "Apache-2.0"
homepage = "https://xvc.dev"
repository = "https://github.com/iesahin/xvc"
categories = ["command-line-utilities", "development-tools"]
keywords = ["file", "devops", "git", "versioning", "mlops"]

[[bin]]
name = "xvc"
path = "src/main.rs"

[lib]
name = "xvc_tests"
crate-type = ["rlib"]

[dependencies]
xvc = { version = "0.5.0", path = "../lib" }
xvc-config = {version = "0.5.0",  path = "../config" }
xvc-core = { version = "0.5.0", path = "../core" }
xvc-logging = { version = "0.5.0", path = "../logging" }
xvc-ecs = { version = "0.5.0", path = "../ecs" }
xvc-file = { version = "0.5.0", path = "../file" }
xvc-pipeline = { version = "0.5.0", path = "../pipeline" }
xvc-walker = { version = "0.5.0", path = "../walker" }
xvc-storage = { version = "0.5.0", path = "../storage" }

## packages for testing
clap = {version = "^4.1", features=["derive"]}

itertools = "^0.10"
serde = { version = "^1.0", features = ["derive"] }
serde_yaml = "^0.9"
serde_json = "^1.0"
crossbeam-channel = "^0.5"
subprocess = "^0.2"
log = "^0.4"
regex = "^1.7"
rand = "^0.8"
which = "^4.3"

[features]
default = ["s3", "minio", "r2", "gcs", "wasabi", "digital-ocean"]
s3 = ["xvc-storage/s3"]
minio = ["xvc-storage/minio"]
r2 = ["xvc-storage/r2"]
gcs = ["xvc-storage/gcs"]
wasabi = ["xvc-storage/wasabi"]
digital-ocean = ["xvc-storage/digital-ocean"]
test-s3 = ["s3"]
test-minio = ["minio"]
test-digital-ocean=["digital-ocean"]
test-wasabi=["wasabi"]
test-gcs =["gcs"]
test-r2 = ["r2"]
test-rsync = []
test-generic-rsync = []



[dev-dependencies]
proptest = "^1.0"
test-case = "^2.2"
globset = "^0.4"
escargot = "^0.5"
xvc-test-helper = { version = "0.5.0", path = "../test_helper" }
shellfn = "^0.1"
jwalk = "^0.6"
anyhow =  "^1.0"
assert_cmd = "^2.0"
assert_fs = "^1.0"
predicates = "^2.1"
trycmd="^0.14"
which = "4.3"
fs_extra = "^1.2"
